--- a/project/bayesian_project.Rmd
+++ b/project/bayesian_project.Rmd
@@ -204,6 +204,34 @@ ggplot(mod_full_aug) +
 
 ```
 
+## Part 4.12: Modeling part 2
+
+Use BIC and a Zellner-Siow prior, with uniform prior probability to the models.
+
+
+```{r data_manip2}
+
+features <- c( 'audience_score', 'feature_film', 'drama', 'runtime', 'mpaa_rating_R', 'thtr_rel_year', 
+               'oscar_season', 'summer_season', 'imdb_rating', 'imdb_num_votes', 'critics_score', 
+               'best_pic_nom', 'best_pic_win', 'best_actor_win', 'best_actress_win', 'best_dir_win', 
+               'top200_box')
+data.model <- movies[, features]
+data.model<- data.model[complete.cases(data.model), ]
+audience_score_bic <- bas.lm(audience_score ~ . - audience_score, data=data.model, prior='BIC', modelprior=uniform())
+summary(audience_score_bic)
+coef_audience_score_bic <- coefficients(audience_score_bic)
+
+
+coef_data_bic <- cbind(coef_audience_score_bic$postmean, coef_audience_score_bic$postsd, confint(coef_audience_score_bic))
+colnames(coef_data_bic) <- c('post mean', 'post sd', colnames(confint(coef_audience_score_bic)))
+## stores information about the post mean, the post standard deviastion, and the 2.5%, 97.5% quantiles and beta obtained by BMA.
+coef_data_bic
+
+#shows that imdb_rating and critics score have hte highest probability with runtime coming in third, so the top model uses these 3 variables. The top 3 models have approximately 40% total probability mass
+image(audience_score_bic, rotate = FALSE)
+
+
+```
 
 ## Part 4.2: Interpretation of Final Model
 
@@ -218,6 +246,23 @@ summary(aic_fit_model)
 ```
 
 * * *
+
+
+## Part 5.0: Prediction
+
+Predict on Moonlight, which has imbd_rating of 7.4, and critics score of 99 and audience score of 77.
+
+
+```{r bma_predict2, cache=TRUE}
+
+features <- c( 'audience_score', 'imdb_rating', 'critics_score' )
+data.final <- movies[, features]
+data.final<- data.final[complete.cases(data.final), ]
+audience_score_zs =  bas.lm(audience_score ~ ., data = data.final, prior = "ZS-null", modelprior = uniform(), method = "MCMC", MCMC.iterations = 10^6)
+prediction_frame <- data.frame(imdb_rating = 7.4, critics_score = 99, audience_score = 77 )
+prediction <- predict(audience_score_zs, newdata = prediction_frame, estimator="BMA")
+prediction$Ybma
+```
 
 ## Part 5: Prediction
 
